Use StandardCharsets
Change-Id: Iefb1b100ae112492d839f19e67b8860a37cc254c